--- a/4-AI/eShopUpdate.AppHost/appsettings.Development.json
+++ b/4-AI/eShopUpdate.AppHost/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "chatcompletion": ""
+    "chatcompletion": "http://localhost:11434/" // Update endpoint for Azure OpenAI
   }
 }
