--- a/4-AI/eShopUpdate.AppHost/appsettings.json
+++ b/4-AI/eShopUpdate.AppHost/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "chatcompletion": ""
+    "chatcompletion": "http://localhost:11434/" // Update endpoint for Azure OpenAI
   }
 }
