--- a/4-AI/eShopUpdateCore/eShopUpdateCore.csproj
+++ b/4-AI/eShopUpdateCore/eShopUpdateCore.csproj
@@ -9,11 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.0.0-rc.1.24511.1" />
     <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0-beta.2" />
-	<PackageReference Include="Aspire.Azure.AI.OpenAI" Version="9.1.0-preview.1.24570.3"/>
+	<PackageReference Include="Aspire.Azure.AI.OpenAI" Version="9.1.0-preview.1.24570.3" />
     <PackageReference Include="Azure.Identity" Version="1.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters.CoreServices" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.0-preview.9.24556.5" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.0.0-preview.9.24556.5" />
+    <PackageReference Include="OllamaSharp" Version="4.0.7" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.0.1" />
   </ItemGroup>
 
