--- a/4-AI/eShopUpdate.AppHost/eShopUpdate.AppHost.csproj
+++ b/4-AI/eShopUpdate.AppHost/eShopUpdate.AppHost.csproj
@@ -12,11 +12,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.0.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Redis" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Ollama" Version="9.0.1-beta.81" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.CognitiveServices" Version="9.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.Redis" Version="9.2.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.2.0" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Ollama" Version="9.4.1-beta.270" />
   </ItemGroup>
 
   <ItemGroup>
